// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Create Destroy User Controller Snapshot Test for empty user-id. 1`] = `
{
  "body": {
    "message": "Oops! user ID is not found.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Create Destroy User Controller Snapshot Test for find user by Id and delete it. 1`] = `
{
  "body": {
    "data": {
      "_id": "507f1f77bcf86cd799439011",
      "articles": [],
      "email": "test@gmail.com",
      "fullname": "UserTest",
      "isActive": true,
      "password": "testPassword",
      "username": "test",
    },
    "message": "User data deleted successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Create Destroy User Controller Snapshot Test for internal server error. 1`] = `
{
  "body": {
    "message": "Oops! Something went wrong while deleting user data.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Create Destroy User Controller Snapshot Test for invalid user-id. 1`] = `
{
  "body": {
    "message": "Invalid userID.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Create Destroy User Controller Snapshot Test for user with user-id not found. 1`] = `
{
  "body": {
    "message": "Looks like that user doesn't exist in our system.",
    "success": false,
  },
  "status": 404,
}
`;

exports[`Create Destroy User Controller Snapshot Test for valid user-id. 1`] = `
{
  "body": {
    "message": "Looks like that user doesn't exist in our system.",
    "success": false,
  },
  "status": 404,
}
`;
